# polygon-indexer

./: .env.example  .gitignore  Cargo.toml  README.md  netflow.db
frontend/dashboard/: pnpm-lock.yaml
frontend/dashboard/app/: globals.css  page.tsx
migrations/: init.sql  seed_binance.sql
src/: aggregator.rs  api.rs  cache.rs  config.rs  db.rs  indexer.rs  main.rs  models.rs  parser.rs  reorg.rs  rpc.rs  test.rs
