[package]
name = "polygon-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
eyre = "0.6"
thiserror = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
alloy = "1.0"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.36"
reqwest = { version = "0.12.23", features = ["json"] }
hex = "0.4.3"
tower-http = { version = "0.5", features = ["cors"] }
anyhow = "1.0.99"
